--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ header .logo {
 	text-decoration: none;
 	color: var(--color-light);
 	transition: 250ms ease-in-out;
+	height: 100%;
 }
 
 .pages a:hover,
